# messanger_back

./: .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  sample.env
app/: consumer.py  container.py  error_handelers.py  main.py  settings.py  workers.py
app/base_routes/: endpoints.py
app/files/adapters/: fastapi_upload_adapter.py
app/schemas/: base.py
app/v1/: router.py
app/v1/files/routes/: endpoints.py
app/v1/files/schemas/: v1_responses.py
app/v1/messaging/routes/: endpoints.py  sessions.py
app/v1/messaging/schemas/: v1_requests.py  v1_responses.py
app/v1/users/routes/: endpoints.py
app/v1/users/schemas/: v1_requests.py  v1_responses.py
migrations/: env.py
migrations/versions/: 0f42f7879ef3_init.py  20260204000001_outbox_events.py  20260224000002_drop_generated_from_messaging_requests.py  20260224000003_add_user_id_to_files.py  3829220b75c8_messages.py  ca5c386dde13_session.py  ca7232639906_add_error_message_column_to_messages.py  d88792a888a4_messages.py
postgres_init/: 01-create-evo-db.sql
src/base/: exceptions.py
src/base/domain/: dto.py  entity.py  enum.py  jobs.py
src/base/infrastructure/: cache.py  lazy_entity_cache.py
src/base/ports/: database.py  unit_of_work.py
src/base/workers/: __init__.py  consume_event_bus_messages.py  dispatch_outbox_events.py
src/files/adapters/: in_memory_upload_adapter.py  local_file_service.py  s3_file_service.py
src/importing/ports/: import_handler_port.py
src/messaging/workers/: __init__.py  generate_messages_from_requests_csv.py
(+151 files in other folders)
